force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending BU Approval</fullName>
            </value>
            <value>
                <fullName>Pending FI Validatio</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>