force-app/main/default/objects/Account/fields/analyticsdemo_batch_id__c.field-meta.xml
<CustomField>
    <fullName>analyticsdemo_batch_id__c</fullName>
    <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
    <label>analyticsdemo_batch_id__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>