force-app/main/default/objects/Account/fields/Brick__c.field-meta.xml
<CustomField>
    <fullName>Brick__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IQVIA / sell-out geographic brick aligned to this pharmacy account.</description>
    <label>Brick</label>
    <referenceTo>Brick__c</referenceTo>
    <relationshipLabel>Pharmacy Accounts</relationshipLabel>
    <relationshipName>Pharmacy_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>