force-app/main/default/objects/Account/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What: Demo OMS Credit Limit &amp; Hold
Who: Bill Macaulay When: March 2023</description>
    <label>Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>