force-app/main/default/objects/Account/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <description>Legacy Zeta customer class code from master data (e.g. AA1, A3, BB3).</description>
    <label>Customer Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>