force-app/main/default/objects/Account/fields/Data_Team_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Team_Approval_Status__c</fullName>
    <description>Data team review status for pharmacy accounts created from field sources such as OpenStreetMap.</description>
    <label>Data Team Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>