force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department or functional area for business contacts.</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>