force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>