force-app/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <description>Shows whether this HCP is a Doctor or a Polyclinic/Clinic, or whether this HCO is a Hospital/Contract.</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Polyclinic</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>University</fullName>
                <isActive>false</isActive>
                <label>University</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>