force-app/main/default/objects/Account/fields/Maps_Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Maps_Enrichment_Status__c</fullName>
    <description>Result of the last maps phone / place enrichment attempt.</description>
    <label>Maps Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Found</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Needs API Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>