force-app/main/default/objects/Account/fields/Maps_Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Maps_Last_Enriched__c</fullName>
    <description>When Maps Phone / place photos were last enriched.</description>
    <label>Maps Last Enriched</label>
    <type>DateTime</type>
</CustomField>