force-app/main/default/objects/Account/fields/Maps_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Maps_Phone_Number__c</fullName>
    <description>Public phone number found for this account location via Google Places / OpenStreetMap.</description>
    <label>Maps Phone Number</label>
    <type>Phone</type>
</CustomField>