force-app/main/default/objects/Account/fields/Maps_Place_Id__c.field-meta.xml
<CustomField>
    <fullName>Maps_Place_Id__c</fullName>
    <description>Google Places place_id used for maps phone and photo enrichment.</description>
    <label>Maps Place Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>