force-app/main/default/objects/Account/fields/Number_Leads_Active__c.field-meta.xml
<CustomField>
    <fullName>Number_Leads_Active__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>