force-app/main/default/objects/Account/fields/Pharmacy_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_License_Number__c</fullName>
    <description>Regulatory license identifier for the pharmacy.</description>
    <label>Pharmacy License Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>