force-app/main/default/objects/Account/fields/Pharmacy_Type__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Type__c</fullName>
    <description>Type of pharmacy business.</description>
    <label>Pharmacy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>