force-app/main/default/objects/Account/fields/Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designation__c</fullName>
    <description>Medical professional designation indicating prescriptive authority type.</description>
    <label>Professional Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>