force-app/main/default/objects/Account/fields/Professional_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Professional_License_Number__c</fullName>
    <description>National or regional medical license number.</description>
    <label>Professional License Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>