force-app/main/default/objects/Account/fields/Professional_Title__c.field-meta.xml
<CustomField>
    <fullName>Professional_Title__c</fullName>
    <description>Role for business contacts without prescriptive authority.</description>
    <label>Professional Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract_Administrator</fullName>
                <label>Contract Administrator</label>
            </value>
            <value>
                <fullName>Formulary_Manager</fullName>
                <label>Formulary Manager</label>
            </value>
            <value>
                <fullName>Payer_Representative</fullName>
                <label>Payer Representative</label>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>