force-app/main/default/objects/Account/fields/Sdo_Scom_Default_Store__c.field-meta.xml
<CustomField>
    <fullName>Sdo_Scom_Default_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Store</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>DefaultStoreAccounts</relationshipLabel>
    <relationshipName>DefaultStoreAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>