force-app/main/default/objects/Account/fields/Specialty_2__c.field-meta.xml
<CustomField>
    <fullName>Specialty_2__c</fullName>
    <description>HCP specialty 2 (Medical Specialty global picklist).</description>
    <label>Specialty 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Specialty</valueSetName>
    </valueSet>
</CustomField>