force-app/main/default/objects/Account/fields/Value_Closed_Won_Opportunties__c.field-meta.xml
<CustomField>
    <fullName>Value_Closed_Won_Opportunties__c</fullName>
    <label>Value Closed Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>