force-app/main/default/objects/Account/fields/Zeta_Tooling_Probe__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Tooling_Probe__c</fullName>
    <label>Zeta Tooling Probe</label>
    <length>40</length>
    <type>Text</type>
</CustomField>