force-app/main/default/objects/Account/recordTypes/Institution_HCO.recordType-meta.xml
<RecordType>
    <fullName>Institution_HCO</fullName>
    <active>true</active>
    <label>HCO</label>
</RecordType>