force-app/main/default/objects/Account/recordTypes/Medical_Professional_HCP.recordType-meta.xml
<RecordType>
    <fullName>Medical_Professional_HCP</fullName>
    <active>true</active>
    <label>HCP</label>
</RecordType>