force-app/main/default/objects/Account/validationRules/Block_Manual_Account_Stage_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Manual_Account_Stage_Change</fullName>
    <active>true</active>
    <description>Account Stage can only change via Approval Process field updates (those bypass validation). Blocks Path, UI, API, and Data Loader edits after create.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Account_Stage__c)
)</errorConditionFormula>
    <errorDisplayField>Account_Stage__c</errorDisplayField>
    <errorMessage>Account Stage cannot be changed manually. Submit the account for approval; Stage updates when the request is submitted, approved, rejected, or recalled.</errorMessage>
</ValidationRule>