force-app/main/default/objects/Account/validationRules/Specialty_Fields_HCP_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Specialty_Fields_HCP_Only</fullName>
    <active>true</active>
    <description>Medical specialty fields are only valid on Medical Professional (HCP) person accounts.</description>
    <errorConditionFormula>AND(
  NOT(
    OR(
      RecordType.DeveloperName = &quot;PersonAccount&quot;,
      RecordType.DeveloperName = &quot;SDO_PersonAccounts&quot;,
      RecordType.DeveloperName = &quot;Medical_Professional_HCP&quot;
    )
  ),
  OR(
    NOT(ISBLANK(TEXT(Specialty_1__c))),
    NOT(ISBLANK(TEXT(Specialty_2__c))),
    NOT(ISBLANK(TEXT(Specialty_3__c))),
    NOT(ISBLANK(TEXT(Specialty_4__c)))
  )
)</errorConditionFormula>
    <errorMessage>Specialty fields can only be set on Medical Professional (HCP) accounts.</errorMessage>
</ValidationRule>